src/sass/styles.scss
@import 'bower_components/bluemix-components/styles';
@import 'functions';

$browser-context: 16px;
$dark-blue: #152934;
$darker-blue: #0f212e;
$bright-blue: #5aaafa;
$light-font: #fff;
$teal: #6eedd8;
$red: #ff5050;

body {
  box-sizing: border-box;
  font-size: $browser-context;
}

.bluemix-header {
  position: static;
}

/*TYPOGRAPHY
~~~~~~~~~~~~~~~~~ */

.h1 {
  display: block;
  font-size: ems(20);
  font-weight: bold;
  margin-bottom: ems(5);
}

p {
  font-size: ems(14);
  line-height: 20px;
}

/* Globals
~~~~~~~~~~~~~~~~~~~~ */

.content {
  background-color: blue;
  display: flex;
  height: 100%;
  justify-content: space-between;
}

.components {
  display: flex;
  flex-flow: column nowrap;
}

.wrapper {
  overflow-x: hidden;
  position: relative;
  width: 100vw;
}

/* Slideout
~~~~~~~~~~~~~~~~~~~ */

$slideout-width: ems(305);

.slideout {
  background-color: $dark-blue;
  color: $light-font;
  height: 100vh;
  position: absolute;
  right: -$slideout-width;
  top: 0;
  width: $slideout-width;
  z-index: 101;
  overflow: hidden;
}

.slideout__header {
  align-items: center;
  background-color: $darker-blue;
  color: $bright-blue;
  display: flex;
  height: ems(50);
  justify-content: space-between;
  padding: 0 ems(20);
}

.slideout__nav {
  align-items: center;
  cursor: default;
  display: flex;
  opacity: 0;
}

.slideout__close {
  width: ems(20);
  cursor: pointer;
}

/* Walkthrough
~~~~~~~~~~~~~~~~~~~~~ */

.walkthrough-header {
  margin: ems(27) ems(40);
}

/* Progress Dots
~~~~~~~~~~~~~~~~~~~~~ */

.progress-dots {
  display: flex;
  justify-content: center;
  margin: ems(8);
}

.progress-dots__list {
  display: flex;
  align-items: center;

  &__item {
    padding: ems(1);
  }
}

.nav-dot {
  width: ems(10);
  height: ems(10);
  border-radius: 50%;
  border: 1px solid $bright-blue;
  transition: background-color .5s;

  &.fill {
    background-color: $bright-blue;
  }

  &-divider {
    height: ems(1);
    width: ems(10);
    border-top: 1px solid $bright-blue;
  }
}

/* Guide
~~~~~~~~~~~~~~~~~~~ */

.guide {
  margin-top: ems(40);
}

/* GuideTags
~~~~~~~~~~~~~~~~~~~~~ */

.guide-tag {
  align-items: center;
  border-left: ems(8) solid $bright-blue;
  cursor: pointer;
  display: flex;
  font-size: ems(12);
  font-weight: 300;
  margin: 1px 0;
  min-height: ems(76);
  width: 100%;

  &.is-completed {
    opacity: .3;
  }

  &.in-progress {
    opacity: .6;
  }
}

.guide-tag__wrap {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
}

.guide-tag__content {
  flex: 3;
  padding: 0 ems(6) 0 ems(30);
}

.guide-tag__status {
  align-self: flex-start;
  display: flex;
  justify-content: flex-end;
  flex: 1;
  font-size: ems(12);
  margin-right: ems(5);
  text-align: right;
  text-wrap: none;

  &--new {
    align-items: flex-start;
    display: flex;
    line-height: 16px;

    // I DONT KNOW WHY THIS WONT TAKE EMS
    &::before {
      color: $red;
      content: '\2022';
      font-size: ems(20);
      margin-right: ems(5);
    }
  }

  &--in-progress {
    color: $bright-blue;
  }
}

.guide-tag__title {
  font-size: ems(14);
  display: block;
  font-weight: 700;
  margin-bottom: ems(5);
}

/* Page
~~~~~~~~~~~~~~~~~~~~~ */

.page {
  padding: 0 ems(35) 0;
  position: relative;
  height: calc(100vh - 200px);
  overflow-y: auto;

  &__item {
    margin-top: ems(40);
    display: flex;
    flex-flow: row nowrap;
    align-items: flex-start;

    &--center {
      margin: 0 auto;
    }

    &__icon {
      margin: ems(4) ems(20) 0 0;
      width: ems(20);
      height: ems(20);
    }
  }

  // page specific highlighting
  & .is-highlighted {
    font-weight: bold;
    color: $bright-blue;
  }
}

/* Guide Footer
~~~~~~~~~~~~~~~~~ */

.guide-footer {
  width: 100%;
  height: ems(93);
  position: absolute;
  bottom: 0;
  text-align: center;
  background-color: $dark-blue;

  &__buttons {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;

    & [class*='btn'] {
      min-width: ems(120);

      &:nth-child(2) {
        margin-left: ems(15);
      }
    }
  }

  &__skip {
    margin-top: ems(16);

    &:hover {
      cursor: pointer !important;
      text-decoration: underline;
    }
  }
}

/*  ~~ Numbered Dots  ~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
$size: 25;
$center-ratio: $size * -0.1;
$font-size: $size * 0.7;

.numbered-dot {
  align-items: center;
  border-radius: 50%;
  border: 1px solid $teal;
  color: $teal;
  display: flex;
  font-size: ems($font-size);
  justify-content: center;
  min-height: ems($size);
  min-width: ems($size);
  text-align: center;
  position: relative;

  &.animate {
    &::before {
      width: ems($size);
      height: ems($size);
      content: '';
      position: absolute;
      border: 1px solid $teal;
      border-radius: 50%;
      top: ems($center-ratio);
      left: ems($center-ratio);
      animation: pulse 2s alternate infinite;
    }

    &::after {
      width: ems($size);
      height: ems($size);
      content: '';
      position: absolute;
      border: 1px solid $teal;
      border-radius: 50%;
      top: ems($center-ratio);
      left: ems($center-ratio);
      animation: pulse2 2s infinite;
    }
  }
}

@keyframes pulse {
  0% {
    transform: scale(1);
    opacity: .7;
  }

  5% {
    transform: scale(1);
    opacity: .7;
  }

  60% {
    transform: scale(1.2);
    opacity: .25;
  }

  100% {
    transform: scale(1);
    opacity: .7;
  }
}

@keyframes pulse2 {
  0% {
    transform: scale(1);
    opacity: .7;
  }

  100% {
    transform: scale(1.6);
    opacity: 0;
  }
}

// ~~ Question Mark ~~
.help {
  align-items: center;
  border-radius: 50%;
  border: ems(2) solid $bright-blue;
  bottom: 1rem;
  color: $bright-blue;
  display: flex;
  font-size: ems(24);
  font-weight: bold;
  height: ems(40);
  justify-content: center;
  position: fixed;
  right: 1rem;
  text-align: center;
  width: ems(40);
  z-index: 100;
  cursor: pointer;

  &.is-highlighted {
    &::before {
      background-color: $red;
      border-radius: 50%;
      content: '';
      height: ems(10);
      position: absolute;
      right: 0;
      top: 0;
      width: ems(10);
    }
  }

  &:hover {
    animation-name: wiggle;
    animation-duration: .5s;
    animation-iteration-count: 1;
  }
}

@keyframes wiggle {
  0% {
    transform: rotate(0deg);
  }

  25% {
    transform: rotate(-15deg);
  }

  75% {
    transform: rotate(15deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

// IGNORE THESE...
// just for formating the compoenents at the bottom of the page
// ~~~~~~~~~~~~~
.temp-slideout {
  width: ems(305);
  height: 200px;
  background-color: $dark-blue;
  color: $light-font;
  position: relative;
  right: 0;
  top: 0;
}

